<resources>
    <string name="app_name">CP670-FinalProjectGroup4</string>
    <string name="todo_button_text">Todo</string>
    <string name="timer_button_text">Pomodoro Timer</string>
    <string name="trends_button_text">Activity Data</string>
    <string name="login_txt_username">Username</string>
    <string name="login_hint_username">Type user name here ...</string>
    <string name="login_txt_pass">Password</string>
    <string name="login_hint_pass">Type password here ...</string>
    <string name="login_btn_login">Login</string>
    <string name="todo_new_item_title">Type new item tile here ...</string>
    <string name="todo_new_item_click">Add</string>
    <string name="todo_update_item_click">Update</string>
    <string name="todo_delete_item_click">Delete</string>
    <string name="todo_clear_item_click">X</string>
    <string name="todo_clear_save_click">Save</string>
    <string name="todo_item_title">Title</string>
    <string name="todo_item_status">Status</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="reset_button">Reset</string>
    <string name="five_min">5 minutes</string>
    <string name="twentyfive_min">25 minutes</string>
    <string name="title_activity_add_to_do">AddToDoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="todo_list_desc_text">Please enter description :</string>
    <string name="todo_list_desc_edit">description ...</string>

    <string name="welcome">Welcome</string>

    <string name="todo_list_location_text">Please enter location :</string>
    <string name="todo_list_location_edit">location ...</string>

    <string name="todo_list_starttime_text">Please enter a start time :</string>
    <string name="todo_list_starttime_label">HH:MM:SS in 24Hours format</string>

    <string name="todo_list_duration_text">Please enter duration :</string>
    <string name="todo_list_duration_edit"># of hours</string>

    <string name="todo_list_custom_dialog_cancel">Cancel</string>
    <string name="todo_list_custom_dialog_startdate">Please enter start date :</string>
    <string name="todo_list_custom_dialog_startdate_format">DD/MM/YYYY</string>

    <string name="todo_list_custom_dialog_title">Adding a new TODO item</string>
    <string name="todo_list_custom_dialog_update_title">Updating a new TODO item</string>
    <string name="title_txt">TODO List</string>
    <string name="developer_txt">Developed by : Android programmer - team 4. ver:1.0</string>
    <string name="remember_me_cb">Remember Login</string>

    <string name="mycal_button">My Calendar</string>
    <string name="selectToDo">Enter a ToDo item</string>

    <string name="todo_list_title_text">Name of new Item</string>
    <string name="todo_list_title_edit">Update item name</string>

</resources>