<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"

        android:minHeight="50dp"
        android:text="@string/todo_list_custom_dialog_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".AddToDoDialogActivity"
        android:id="@+id/AddTodoDialog">

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/txtUpdateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_desc_text" />

        <EditText
            android:id="@+id/editUpdateDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAlignment="center"
            android:hint="@string/todo_list_desc_edit"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/txtUpdateLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_location_text" />

        <EditText
            android:id="@+id/editUpdateLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/todo_list_location_edit"
            />

        <TextView
            android:id="@+id/txtUpdateStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_custom_dialog_startdate" />

        <EditText
            android:id="@+id/edtUpdateStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/todo_list_custom_dialog_startdate_format"
            />

        <TextView
            android:id="@+id/txtUpdateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_starttime_text" />

        <EditText
            android:id="@+id/edtUpdatestartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/todo_list_starttime_label"
            />

        <TextView
            android:id="@+id/txtUpdateDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_duration_text" />

        <EditText
            android:id="@+id/editUpdateDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/todo_list_duration_edit"
            />


    </LinearLayout>

</LinearLayout>
