<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="3"
    android:columnCount="1"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/todo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_button_text" />

    <Button
        android:id="@+id/timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_button_text" />

    <Button
        android:id="@+id/trends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trends_button_text" />

</GridLayout>