<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayoutTimer"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="4"
    android:visibility="visible">

    <Button
        android:id="@+id/TimerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="150dp"
        android:onClick="click_start"
        android:text="@string/start_button" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="217dp"
        android:layout_height="70dp"

        android:layout_above="@+id/selectedToDo"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textSize="20pt"
        app:autoSizeTextType="uniform" />

    <Button
        android:id="@+id/TimerStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="150dp"
        android:onClick="click_stop"
        android:text="@string/stop_button" />

    <Button
        android:id="@+id/TimerReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="270dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="150dp"
        android:onClick="click_reset"
        android:text="@string/reset_button" />

    <Button
        android:id="@+id/FiveMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="250dp"
        android:onClick="five_min_timer"
        android:text="@string/five_min" />

    <Spinner
        android:id="@+id/selectedToDo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/material_on_background_disabled"
        android:foreground="@android:drawable/gallery_thumb"
        android:hint="@string/selectToDo"
        android:spinnerMode="dropdown"
        android:textAlignment="center" />

    <Button
        android:id="@+id/TwentyFiveMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="250dp"
        android:onClick="twentyfive_min_timer"
        android:text="@string/twentyfive_min"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>



